--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
         <title>
             Are you using HTTP Toolkit? No.
         </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <style>
             html {
