--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
         <script type="application/json" id="amiusing">
             { "amiusing": false }
         </script>
