Update name of 'Anything' interception option
The name in the UI changed a little while ago, so this
is no longer correct.

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
             <p>
                 If you're trying to use HTTP Toolkit, that means something isn't configured quite right.
                 Make sure the proxy settings in your browser (or other HTTP client) match your HTTP Toolkit
-                settings. You can check the settings in the 'Manual Setup' option on the Intercept page.
+                settings. You can check the settings in the 'Anything' option on the Intercept page.
             </p>
             <p>
                 If you're not trying to use HTTP Toolkit, then you're all good. You can
