--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
 
             body {
                 min-height: 100%;
+                box-sizing: border-box;
+                margin: 0;
+                padding: 8px;
+
                 background-color: #e1421f;
                 font-family: Lato;
                 display: flex;
