Certificate error page works good - ship it

--- a/public/certificate-404.html
+++ b/public/certificate-404.html
@@ -57,7 +57,7 @@
         <div class="content">
             <h1>You're not connected to HTTP Toolkit</h1>
             <p>You have reached this page trying to download your HTTP Toolkit CA certificate. This certificate is unique to your computer, and is not available on the internet.</p>
-            <p><strong>To download your certificate, make sure this device is configured to use HTTP Toolkit on your computer as its HTTP proxy.</strong></p>
+            <p><strong>To download your certificate, first make sure this device is configured to use HTTP Toolkit on your computer as its HTTP proxy, and then reload this page.</strong></p>
             <p>
                 The steps to do so will depend on your device, but you can take a look at the <a href="https://httptoolkit.com/docs/">HTTP Toolkit docs</a> for more information.
             </p>
