Mild tweak to update pages to new branding

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
             Are you using HTTP Toolkit? No.
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet">
+
         <style>
             html {
                 height: 100%;
@@ -23,12 +24,15 @@
                 padding: 8px;
 
                 background-color: #e1421f;
-                font-family: Lato;
+
+                font-family: "DM Sans", Arial, sans-serif;
+                letter-spacing: -0.5px;
+                line-height: 1.3;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-                color: #efefef;
+                color: #fafafa;
             }
 
             .content {
@@ -48,7 +52,7 @@
             }
 
             a {
-                color: #efefef;
+                color: #fafafa;
                 font-weight: bold;
             }
         </style>
@@ -64,7 +68,7 @@
             </p>
             <p>
                 If you're not trying to use HTTP Toolkit, then you're all good, and you don't need to worry about this.
-                You can try it out though if you're interested at <a href="https://httptoolkit.tech">HttpToolkit.tech</a>.
+                You can try it out though if you're interested at <a href="https://httptoolkit.com">HttpToolkit.com</a>.
             </p>
         </div>
     </body>
