--- a/public/certificate.html
+++ b/public/certificate.html
@@ -10,7 +10,7 @@
             404: You are not connected to HTTP Toolkit
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet">
         <style>
             html {
                 height: 100%;
@@ -23,12 +23,15 @@
                 padding: 8px;
 
                 background-color: #e1421f;
-                font-family: Lato;
+
+                font-family: "DM Sans", Arial, sans-serif;
+                letter-spacing: -0.5px;
+                line-height: 1.3;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-                color: #efefef;
+                color: #fafafa;
             }
 
             .content {
